vlib/v/parser/tests/select_bad_key_3.vv
fn f3_bad(ch1 chan int) {
	select {
		b := <-ch1 {
			println(b)
		}
		println(7) {
			println("shouldn't get here")
		}
	}
}

fn main() {}
